--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "node -e \"if (process.env.VERCEL) { console.log('Skipping Playwright browser install on Vercel - using @sparticuz/chromium'); } else { require('child_process').exec('npx playwright install chromium', (err) => { if (err) console.log('Note: Playwright browsers installation skipped. Run: npx playwright install chromium'); }); }\"",
-    "install-browsers": "npx playwright install chromium"
+    "install-browsers": "npx playwright install chromium",
+    "extract-profile": "ts-node scripts/extract-static-profile.ts"
   },
   "dependencies": {
     "@sparticuz/chromium": "^143.0.0",
@@ -19,7 +20,7 @@
     "react-dom": "^18.3.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
+    "@types/node": "^20.19.27",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.0",
@@ -27,6 +28,7 @@
     "eslint-config-next": "^14.2.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.0"
   }
 }
