--- a/package.json
+++ b/package.json
@@ -7,17 +7,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "node -e \"if (process.env.VERCEL) { console.log('Skipping Playwright browser install on Vercel - using @sparticuz/chromium'); } else { require('child_process').exec('npx playwright install chromium', (err) => { if (err) console.log('Note: Playwright browsers installation skipped. Run: npx playwright install chromium'); }); }\"",
+    "postinstall": "npx playwright install chromium",
     "install-browsers": "npx playwright install chromium",
     "extract-profile": "ts-node scripts/extract-static-profile.ts"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^143.0.0",
     "@types/cheerio": "^0.22.35",
     "cheerio": "^1.1.2",
     "next": "^14.2.0",
     "pdf-parse": "^2.4.5",
-    "playwright-core": "^1.57.0",
+    "playwright": "^1.57.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0"
   },
